--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="RestartRememberMeServiceAfterKilled" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
